style/index.css
/* Add CSS styling here */
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Trade+Winds&display=swap');

*{
  box-sizing:border-box;
  margin:0;
  padding:0;
  max-width:100%;
  border: solid 1px blue;
}

html{
  font-size:62.5%
}

body{
  font-size: 1.6rem;
  font-family: 'Barlow Condensed', sans-serif;
  background-color: #597496;
  color:#4E3441;
}

h1{
  font-family: 'Trade Winds', cursive;
  font-size: 5rem;
  color:#945256;
} 

h2{
  font-family: 'Trade Winds', cursive;
  color:#4E3441;
  margin-bottom: 5%;
  
}

header{
  padding:2%;
  background-color: #4E3441;
  border-bottom: black 2px solid;
}

section{
  padding:1%;
}

.btn{
  text-decoration:none;
  padding:1% 3%;
  font-weight:bold;
  background-color:#C2A4AD;
  color:#4E3441;
  margin-top: 1%;
  border: 1px solid #EED6D3;
}

a:hover{
  background-color: #597496;
  color: #C2A4AD;
}

.active-page{
  color:#C2A4AD;
  background-color:#4E3441;
}

p{
  font-size: 4rem;
}

/* header section */

nav{
  display:flex;
  margin-left: 1%;
}

nav a{
  text-decoration:none;
  padding:1% 3%;
  font-weight:bold;
  background-color:#C2A4AD;
  color:#4E3441;
  margin-top: 1%;
  border: 1px solid #EED6D3;
}

/* info section */

.info-container{
  display:flex;
  justify-content: space-evenly;
}

.big-image{
  width:50%;
}

.info{
  width:50%;
  padding:2%;
  margin-top: 5%;
}

.info p{
  margin-top: 10%;
}

/* projects section */

.projects-section{
  display:flex;
  flex-direction: row;
  align-content: space around;
  flex-wrap: wrap;
}


.project-box{
  width:25%;
  text-align:center;
  padding-bottom: 2%;
}

.project-box img{
height: 45rem;
width: 45rem;
object-fit: cover;
}

.project-box p{
  padding: 1%;
}

/* footer */

footer{
  padding:1%;
  background-color: #4E3441;
  display:flex;
  flex-direction: column;
  color:#C2A4AD;
  text-align: center;
  justify-content: center;
}

footer .btn{
  width: 20rem;
  margin: 1% auto;
}

footer img{
  width: 5%;
}

.social:hover{
background-color:#4E3441;
}

/* start media queries */

/* styles for 800px tablet width */
@media(max-width:800px){
  h1{
    text-align: center;
    font-size: 8rem;
  }
  nav{
    width: 100%;
    font-size: 3rem;
    text-align: center;
    justify-content: space-around;
    margin:0 auto;
  }
  nav a{
    width:25%;
  }
  .info-container{
    flex-direction: column;
  }
  .info-container div{
    width:100%;
    justify-content: space-around;
  }
  .info{
    text-align: center;
  }

  h2{
    font-size: 4rem;
  }
  .btn{
    font-size: 3rem;
  }
  .project-box{
    width:50%;
    font-size: 2rem;
  }
  .project-box img{
    height: 35rem;
    width: 35rem;
  }
}

/* end styles for tablet width and begin styles for 500px mobile width */
@media(max-width:500px){
  h1{
    font-size: 5rem;
  }
  nav{
    flex-direction: column;
    align-items: center;
  }
  nav a{
    width:40%;
  }

  .info p{
    font-size: 3.5rem;
    margin-top: 1.5%;
  }
  h2{
    margin-bottom: 1%;
  }
  .project-box{
    width:100%;
    margin-top: 10%;
  }
  .project-box img{
    width: 40rem;
    height: 40rem;
  }
  footer img{
    width:20%;
  }
}

